--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
       "cordova-plugin-googlemaps": {
         "API_KEY_FOR_ANDROID": "AIzaSyC8ZX0bH754Ldf5yWa6Ui8yvBYyh55BXMI"
       },
-      "cordova-plugin-progress": {}
+      "cordova-plugin-progress": {},
+      "cordova-plugin-pdialog": {}
     }
   },
   "dependencies": {
@@ -31,6 +32,7 @@
     "cordova-plugin-ezar-videooverlay": "^1.0.0",
     "cordova-plugin-geolocation": "~2.3.0",
     "cordova-plugin-googlemaps": "^2.1.1",
+    "cordova-plugin-pdialog": "^2.0.1",
     "cordova-plugin-progress": "^0.3.0",
     "cordova-plugin-whitelist": "1"
   }
